[gd_scene load_steps=5 format=3 uid="uid://bcmfd3yd2ilpe"]

[ext_resource type="Script" path="res://misc_Testing_Scenes/radom dohikies/vent/ventBomb.gd" id="1_rugqe"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0brlb"]
bounce = 0.9

[sub_resource type="SphereShape3D" id="SphereShape3D_q85kh"]
radius = 0.125

[sub_resource type="SphereShape3D" id="SphereShape3D_mnu2w"]
radius = 1.5

[node name="VentBomb" type="RigidBody3D" groups=["teleportable"]]
mass = 3.0
physics_material_override = SubResource("PhysicsMaterial_0brlb")
max_contacts_reported = 4
contact_monitor = true
script = ExtResource("1_rugqe")

[node name="bombShell" type="CSGSphere3D" parent="."]
radius = 0.125

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_q85kh")

[node name="lifeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="explosionArea" type="Area3D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="explosionArea"]
shape = SubResource("SphereShape3D_mnu2w")

[node name="detonateTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="lifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="body_entered" from="explosionArea" to="." method="_on_explosion_area_body_entered"]
[connection signal="timeout" from="detonateTimer" to="." method="_on_detonate_timer_timeout"]
